resources/sass/detailOverview.scss
.detailspage {
    .wishlist-icon-modal {
        &.marked-icon {
            .-icon {
                font-weight: 900;
            }
        }
    }
}
div.ekko-lightbox div.modal-dialog {
    max-width: 100% !important;
}
.ekko-lightbox-container {
    height: 100% !important;
}

//modal code
.products-modal-details {
    overflow: scroll;
    height: 65vh;
}
.navbar-modal {
    background-color: transparent !important;
    color: $products-bg;
    font-size: 18px;
}
.product-close {
    z-index: 1;
    font-size: 50px !important;
    color: $white;
    margin-right: 35px;
}
.modal-nav-link {
    display: block;
    padding: 0rem 1rem;
    text-decoration: none;
    color: $category-bg;
}
.modal-nav-item {
    :hover {
        text-decoration: none;
        color: $products-bg;
    }
}
.modal-hr {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    border: 0;
    border-top: 1px solid $secondary-color;
}
.product-modal-body {
    position: relative;
    flex: 1 1 auto;
    padding: 0 5px;
}
.product-modal-dialog,
.product-modal-content {
    /* 80% of window height */
    height: 100%;
}
.product-modal-dialog {
    margin: 0 auto;
}
// .modal-body {
//     position: relative;
//     flex: 1 1 auto;
//     padding: 1rem 0;
// }
// .modal-dialog,
// .modal-content {
//     /* 80% of window height */
//     height: 100%;
// }
// .modal-dialog {
//     margin: 0 auto;
// }

//modal code end

.detailspage-main-div {
    // font-family: Helvetica, sans-serif;
    .detailspage {
        .wishlist-icon {
            @include media-breakpoint-up(md) {
                position: absolute;
                right: 0px;
                top: 0;
                font-size: 21px;
            }
            &.marked {
                .-icon {
                    font-weight: 900;
                }
            }
            &.marked-icon {
                .-icon {
                    font-weight: 900;
                }
            }
        }
        .wishlist-icon-modal {
            &.marked-icon {
                .-icon {
                    font-weight: 900;
                }
            }
        }

        .filters.filters-mobile {
            width: 100% !important;
            background: $secondary-color;
            color: $white;
            position: absolute;
            z-index: 100;
            display: none;

            &.show {
                display: block;
            }

            .single-filter {
                margin: 20px;
                .select {
                    .select-styled {
                        background: white;
                        border-radius: 10px;
                        padding-right: 50px;
                        min-width: 220px;

                        &::after {
                            border: none;
                            background: url('../../public/images/filter-arrow.png');
                            width: 41px;
                            height: 41px;
                            top: 0px;
                            right: -20px;
                            background-size: cover;
                            border-radius: 0 10px 10px 0;
                        }
                    }
                }

                .select-label {
                    margin-right: 10px;
                    font-size: 16px;
                    color: $primary-color;
                }

                ul {
                    li {
                        display: inline-block;

                        .container {
                            .checkmark {
                                border: 1px solid $white !important;

                                &:after {
                                    left: 4px;
                                    top: 1px;
                                    width: 5px;
                                    height: 10px;
                                    border: solid $border-color;
                                    border-width: 0 3px 3px 0;
                                    -webkit-transform: rotate(45deg);
                                    transform: rotate(45deg);
                                }
                            }
                        }
                    }
                }

                .irs-line {
                    border: 1px solid $white;
                    background-color: $white !important;
                }
            }
        }
        .zoom-img-variation {
            cursor: zoom-in;
        }
        .carousel-img {
            cursor: pointer;
        }
        .controls-div {
            height: 33px;
            .-icon {
                font-size: 22px;
                margin: 5px;
            }
        }

        .-images-container {
            height: 480px;
            overflow-x: auto;
            margin: 0px 0px 15px 0px;
            @include media-breakpoint-up(md) {
                margin: 15px 0px;
            }
            .-images {
                overflow-y: scroll;
                height: 480px;
                white-space: nowrap;
                padding: 15px 0;
                .-prod-img {
                    max-height: 100%;
                    display: block;
                }
            }
        }

        .responsive {
            height: auto;
            max-width: 100%;
            .slick-slide {
                margin: 0px;
                padding: 0px;
            }
            .slick-track {
                margin: 0px;
            }
            .mini-carousel-item {
                .carousel-img {
                    margin: 0px;
                }
            }
        }
        .brand-header {
            padding-bottom: 5px;
            border-bottom: 2px solid #ccc;
            margin-bottom: 10px;
        }

        .prod-price-card {
            font-size: 24px;
            font-weight: 600;
            .pdp-buy-btn {
                width: 100%;
                @include primary-button;
            }

            .select-label {
                display: block;
                font-weight: 400;
                text-transform: capitalize;
                font-size: 16px;
                margin: 10px 0px;
            }

            .select {
                display: block;
                width: 100%;
                height: auto;
                .select-styled {
                    padding: 5px 15px;
                    border: 1px solid $primary-color;
                    border-radius: 4px;
                }
                .select-options {
                    max-height: 250px;
                    overflow-y: scroll;
                    li {
                        text-align: center;
                        padding-left: 15px;
                        padding-right: 15px;
                    }
                }
            }
        }

        .rating-container {
            margin: auto auto 10px auto;
            .rating {
                margin-left: 0px;
                vertical-align: middle;
            }
        }
    }

    // .nav-tabs {
    //     display:none;
    // }

    // @media(min-width:768px) {
    //     .nav-tabs {
    //         display: flex;
    //     }

    //     .card {
    //         border: none;
    //     }

    //     .card .card-header {
    //         display:none;
    //     }

    //     .card .collapse{
    //         display:block;
    //     }
    // }

    // @media(max-width:767px){
    //     .tab-pane {
    //         display: block !important;
    //         opacity: 1;
    //     }
    // }
}

.drift-zoom-pane {
    position: absolute;
    width: 150px;
    height: 150px;
    border-radius: 75px;
    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.3) !important;
    &.carousel-zoom-pane {
        margin-top: 100px;
    }
}

@include media-breakpoint-down(md) {
    .-product-details {
        border-radius: 20px;
        font-size: 14px;
        font-weight: 600;
        .pdp-buy-btn {
            width: 100%;
            color: $primary-color;
            background-color: $secondary-color;
            font-size: 24px;
            border-radius: 10px;
            margin: 10px 0px;
        }
    }

    .prod-desc {
        padding: 0px;
        overflow: hidden;
    }

    .detailspage {
        .container {
            padding: 0px;
        }
    }

    .tab-content {
        padding: 15px;
    }
}

.tab-pane {
    margin-top: 10px;
}

.card .card-header {
    background: $secondary-color;

    .btn-link {
        &:hover {
            text-decoration: none;
        }
    }
    .btn.btn-link {
        width: 100%;
        text-align: left;

        &:hover {
            color: $golden;
        }
        .-text {
            color: $primary-color;
            &:hover {
                color: $golden;
            }
            &:after {
                content: '';
                width: 0;
                height: 0;
                border: 5px solid transparent;
                border-color: $primary-color transparent transparent transparent;
                top: 10px;
                left: 7px;
                position: relative;
            }
        }
    }
}

.close-main-btn {
    position: absolute;
    right: 0;
    font-size: 30px;
    margin: 20px;
    z-index: 1000;
    cursor: pointer;
}

.prod-main-img {
    display: none;
}
.box {
    max-width: 1080px;
    margin: auto;
}
.-text {
    color: $secondary-color;
}
#scroll-bar-img {
    ::-webkit-scrollbar {
        width: 20px;
    }
    ::-webkit-scrollbar-track {
        box-shadow: inset 0 0 5px grey;
        border-radius: 10px;
    }
    ::-webkit-scrollbar-thumb {
        background: #ffcc00;
        border-radius: 10px;
    }

    ::-webkit-scrollbar-thumb:hover {
        background: #ffcc00ba;
    }
}
.btn-link-text {
    font-size: 14px;
    background: none;
    border: none;
    margin: 0;
    padding: 0;
    cursor: pointer;
    &:after {
        content: '>';
        background: none;
        margin: 0;
        padding: 0;
        cursor: pointer;
        border: 5px solid transparent;
        border-color: $primary-color transparent transparent transparent;
        font-size: 14px;
        background: $yellow;
    }
}

